--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -23,6 +23,21 @@
 
         <!-- 佑 社群回饋 -->
         <section id="social">
+            <div class="header">
+                <div class="container"></div>
+                <div class="container">
+                    <div class="title">
+                        <div class="title">
+                            <img class="ig-icon" src="/images/nav/icon1-7.png"alt="ig-icon">
+                            <div class="title-text">
+                            <div class="title-text-1">社群回饋</div>
+                            <div class="title-text-2">SOCIAL</div>
+                        </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="container">
                 <!-- Swiper -->
                 <div #swiperRef="" class="swiper mySwiper">
