--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
     <style>
         #about {
         height: 100vh;
@@ -63,7 +63,7 @@
     <!-- 秋 footer -->
     <footer></footer>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="bower_components/aos/dist/aos.js"></script>
     
     <script>
         
