--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -29,12 +29,11 @@
                 <div class="container">
                     <div class="title">
                         <div class="title">
-                            <img class="ig-icon" src="/images/nav/icon1-7.png"alt="ig-icon">
+                            <img class="ig-icon" src="/images/nav/icon1-7.png" alt="ig-icon">
                             <div class="title-text">
-                            <div class="title-text-1">社群回饋</div>
-                            <div class="title-text-2">SOCIAL</div>
-                        </div>
-                        </div>
+                                <div class="title-text-1">社群回饋</div>
+                                <div class="title-text-2">SOCIAL</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -43,16 +42,40 @@
                 <!-- Swiper -->
                 <div #swiperRef="" class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide"><iframe class="card-body" src="https://www.instagram.com/p/Cq9ZWd9hUSw/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A0%2C%22os%22%3A715.5%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D" allowtransparency="true" allowfullscreen="true" frameborder="0" height="556" data-instgrm-payload-id="instagram-media-payload-0" scrolling="no" ></iframe></div>
-                        <div class="swiper-slide"><iframe class="card-body" src="https://www.instagram.com/p/Ck3jKhFAVqQ/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A1%2C%22os%22%3A717.3000000119209%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D" allowtransparency="true" allowfullscreen="true" frameborder="0" height="556" data-instgrm-payload-id="instagram-media-payload-1" scrolling="no" ></iframe></div>
-                        <div class="swiper-slide"><iframe class="card-body" src="https://www.instagram.com/p/CklcJ6FJJf5/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A2%2C%22os%22%3A718.3999999761581%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D" allowtransparency="true" allowfullscreen="true" frameborder="0" height="556" data-instgrm-payload-id="instagram-media-payload-2" scrolling="no" ></iframe></div>
-                        <div class="swiper-slide"><iframe class="card-body" src="https://www.instagram.com/p/CfWV82HPtL0/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A3%2C%22os%22%3A1361.300000011921%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D" allowtransparency="true" allowfullscreen="true" frameborder="0" height="556" data-instgrm-payload-id="instagram-media-payload-3" scrolling="no" ></iframe></div>
-                        <div class="swiper-slide"><iframe class="card-body" src="https://www.instagram.com/p/CjpcRW4vGyi/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A4%2C%22os%22%3A1376.5%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D" allowtransparency="true" allowfullscreen="true" frameborder="0" height="556" data-instgrm-payload-id="instagram-media-payload-4" scrolling="no" ></iframe></div>
-                        <div class="swiper-slide"><iframe class="card-body" src="https://www.instagram.com/p/CgOU1bMMl2F/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A5%2C%22os%22%3A1381.699999988079%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D" allowtransparency="true" allowfullscreen="true" frameborder="0" height="556" data-instgrm-payload-id="instagram-media-payload-5" scrolling="no" ></iframe></div>
-                        <div class="swiper-slide"><iframe class="card-body" src="https://www.instagram.com/p/CekdlemMFRL/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A6%2C%22os%22%3A1809.3999999761581%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D" allowtransparency="true" allowfullscreen="true" frameborder="0" height="556" data-instgrm-payload-id="instagram-media-payload-6" scrolling="no" ></iframe></div>
-                        <div class="swiper-slide"><iframe class="card-body" src="https://www.instagram.com/p/CaBGWBAPCir/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A7%2C%22os%22%3A1824.699999988079%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D" allowtransparency="true" allowfullscreen="true" frameborder="0" height="643" data-instgrm-payload-id="instagram-media-payload-7" scrolling="no" ></iframe></div>
+                        <div class="swiper-slide"><iframe class="card-body"
+                                src="https://www.instagram.com/p/Cq9ZWd9hUSw/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A0%2C%22os%22%3A715.5%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D"
+                                allowtransparency="true" allowfullscreen="true" frameborder="0" height="556"
+                                data-instgrm-payload-id="instagram-media-payload-0" scrolling="no"></iframe></div>
+                        <div class="swiper-slide"><iframe class="card-body"
+                                src="https://www.instagram.com/p/Ck3jKhFAVqQ/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A1%2C%22os%22%3A717.3000000119209%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D"
+                                allowtransparency="true" allowfullscreen="true" frameborder="0" height="556"
+                                data-instgrm-payload-id="instagram-media-payload-1" scrolling="no"></iframe></div>
+                        <div class="swiper-slide"><iframe class="card-body"
+                                src="https://www.instagram.com/p/CklcJ6FJJf5/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A2%2C%22os%22%3A718.3999999761581%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D"
+                                allowtransparency="true" allowfullscreen="true" frameborder="0" height="556"
+                                data-instgrm-payload-id="instagram-media-payload-2" scrolling="no"></iframe></div>
+                        <div class="swiper-slide"><iframe class="card-body"
+                                src="https://www.instagram.com/p/CfWV82HPtL0/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A3%2C%22os%22%3A1361.300000011921%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D"
+                                allowtransparency="true" allowfullscreen="true" frameborder="0" height="556"
+                                data-instgrm-payload-id="instagram-media-payload-3" scrolling="no"></iframe></div>
+                        <div class="swiper-slide"><iframe class="card-body"
+                                src="https://www.instagram.com/p/CjpcRW4vGyi/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A4%2C%22os%22%3A1376.5%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D"
+                                allowtransparency="true" allowfullscreen="true" frameborder="0" height="556"
+                                data-instgrm-payload-id="instagram-media-payload-4" scrolling="no"></iframe></div>
+                        <div class="swiper-slide"><iframe class="card-body"
+                                src="https://www.instagram.com/p/CgOU1bMMl2F/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A5%2C%22os%22%3A1381.699999988079%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D"
+                                allowtransparency="true" allowfullscreen="true" frameborder="0" height="556"
+                                data-instgrm-payload-id="instagram-media-payload-5" scrolling="no"></iframe></div>
+                        <div class="swiper-slide"><iframe class="card-body"
+                                src="https://www.instagram.com/p/CekdlemMFRL/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A6%2C%22os%22%3A1809.3999999761581%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D"
+                                allowtransparency="true" allowfullscreen="true" frameborder="0" height="556"
+                                data-instgrm-payload-id="instagram-media-payload-6" scrolling="no"></iframe></div>
+                        <div class="swiper-slide"><iframe class="card-body"
+                                src="https://www.instagram.com/p/CaBGWBAPCir/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A7%2C%22os%22%3A1824.699999988079%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D"
+                                allowtransparency="true" allowfullscreen="true" frameborder="0" height="643"
+                                data-instgrm-payload-id="instagram-media-payload-7" scrolling="no"></iframe></div>
                     </div>
-                    
+
                 </div>
             </div>
             <div class="swiper-button">
@@ -62,7 +85,44 @@
         </section>
 
         <!-- 佑 產品經銷 -->
-        <section id="distribution"></section>
+        <section id="distribution">
+            <div id="distribution-area">
+                <div class="header">
+                    <div class="container"></div>
+                    <div class="container">
+                        <div class="title">
+                            <div class="title">
+                                <img class="distribution-icon" src="/img/distribution.svg" alt="ig-icon">
+                                <div class="title-text">
+                                    <div class="title-text-1">產品經銷</div>
+                                    <div class="title-text-2">DISTRIBUTION</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Swiper -->
+                <div #swiperRef="" class="swiper mySwiper2">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img class="img-w-h-border-img" src="./img/shop-img-border.png" alt=""></div>
+                        <div class="swiper-slide"><img class="img-w-h-border-img" src="./img/shop-img-border.png" alt=""></div>
+                        <div class="swiper-slide"><img class="img-w-h-border-img" src="./img/shop-img-border.png" alt=""></div>
+                        <div class="swiper-slide"><img class="img-w-h-border-img" src="./img/shop-img-border.png" alt=""></div>
+                        <div class="swiper-slide"><img class="img-w-h-border-img" src="./img/shop-img-border.png" alt=""></div>
+                        <div class="swiper-slide"><img class="img-w-h-border-img" src="./img/shop-img-border.png" alt=""></div>
+                        <div class="swiper-slide"><img class="img-w-h-border-img" src="./img/shop-img-border.png" alt=""></div>
+                        <div class="swiper-slide"><img class="img-w-h-border-img" src="./img/shop-img-border.png" alt=""></div>
+                    </div>
+                    
+                </div>
+                <div class="swiper-button2">
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                </div>
+            </div>
+   
+            </div>
+        </section>
 
         <!-- 翔 熱門經典 -->
         <section id="classic"></section>
