產品經銷結構（大致完成）

--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -28,12 +28,10 @@
                 <div class="container"></div>
                 <div class="container">
                     <div class="title">
-                        <div class="title">
-                            <img class="ig-icon" src="/images/nav/icon1-7.png" alt="ig-icon">
-                            <div class="title-text">
-                                <div class="title-text-1">社群回饋</div>
-                                <div class="title-text-2">SOCIAL</div>
-                            </div>
+                        <img class="ig-icon" src="/images/nav/icon1-7.png" alt="ig-icon">
+                        <div class="title-text">
+                            <div class="title-text-1">社群回饋</div>
+                            <div class="title-text-2">SOCIAL</div>
                         </div>
                     </div>
                 </div>
@@ -88,15 +86,12 @@
         <section id="distribution">
             <div id="distribution-area">
                 <div class="header">
-                    <div class="container"></div>
                     <div class="container">
                         <div class="title">
-                            <div class="title">
-                                <img class="distribution-icon" src="/img/distribution.svg" alt="ig-icon">
-                                <div class="title-text">
-                                    <div class="title-text-1">產品經銷</div>
-                                    <div class="title-text-2">DISTRIBUTION</div>
-                                </div>
+                            <img class="distribution-icon" src="/img/distribution.svg" alt="ig-icon">
+                            <div class="title-text">
+                                <div class="title-text-1">產品經銷</div>
+                                <div class="title-text-2">DISTRIBUTION</div>
                             </div>
                         </div>
                     </div>
@@ -104,23 +99,105 @@
                 <!-- Swiper -->
                 <div #swiperRef="" class="swiper mySwiper2">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img class="img-w-h-border-img" src="./img/shop-img-border.png" alt=""></div>
-                        <div class="swiper-slide"><img class="img-w-h-border-img" src="./img/shop-img-border.png" alt=""></div>
-                        <div class="swiper-slide"><img class="img-w-h-border-img" src="./img/shop-img-border.png" alt=""></div>
-                        <div class="swiper-slide"><img class="img-w-h-border-img" src="./img/shop-img-border.png" alt=""></div>
-                        <div class="swiper-slide"><img class="img-w-h-border-img" src="./img/shop-img-border.png" alt=""></div>
-                        <div class="swiper-slide"><img class="img-w-h-border-img" src="./img/shop-img-border.png" alt=""></div>
-                        <div class="swiper-slide"><img class="img-w-h-border-img" src="./img/shop-img-border.png" alt=""></div>
-                        <div class="swiper-slide"><img class="img-w-h-border-img" src="./img/shop-img-border.png" alt=""></div>
+                        <div class="swiper-slide d-f-direction-c">
+                            <div class="img-w-h-border-img">
+                                <img class="product-img"
+                                    src="./images/product/1668998205a2557a7b2e94197ff767970b67041697.jpg" alt="">
+                            </div>
+                            <div class="commodity_title">
+                                老虎堂地瓜條
+                            </div>
+                            <div class="commodity_title_english">
+                                Tiger Sugar Sweet Potato Fries
+                            </div>
+                            <div class="commodity_sort">
+                                零食｜Snack
+                            </div>
+                        </div>
+                        <div class="swiper-slide d-f-direction-c">
+                            <div class="img-w-h-border-img">
+                                <img class="product-img"
+                                    src="./images/product/165899031442a0e188f5033bc65bf8d78622277c4e.jpg" alt="">
+                            </div>
+                            <div class="commodity_title">
+                                經典黑糖麻糬包
+                            </div>
+                            <div class="commodity_title_english">
+                                Black Sugar Mochi Bun
+                            </div>
+                            <div class="commodity_sort">
+                                食品｜Food
+                            </div>
+                        </div>
+                        <div class="swiper-slide d-f-direction-c">
+                            <div class="img-w-h-border-img">
+                                <img class="product-img"
+                                src="./images/product/165899100742a0e188f5033bc65bf8d78622277c4e.jpg" alt="">
+                            </div>
+                            <div class="commodity_title">
+                                爆漿起司流心包
+                            </div>
+                            <div class="commodity_title_english">
+                                Bursting Cheese Filling Bun
+                            </div>
+                            <div class="commodity_sort">
+                                食品｜Food
+                            </div>
+                        </div>
+                        <div class="swiper-slide d-f-direction-c">
+                            <div class="img-w-h-border-img">
+                                <img class="product-img"
+                                src="./images/product/1658908734cfecdb276f634854f3ef915e2e980c31.jpg" alt="">
+                            </div>
+                            <div class="commodity_title">
+                                黑糖奶霜樹幹年輪
+                            </div>
+                            <div class="commodity_title_english">
+                                Black Suga Cream Trunk Baumkuchen
+                            </div>
+                            <div class="commodity_sort">
+                                甜點｜dessert
+                            </div>
+                        </div>
+                        <div class="swiper-slide d-f-direction-c">
+                            <div class="img-w-h-border-img">
+                                <img class="product-img"
+                                src="./images/product/16589912415878a7ab84fb43402106c575658472fa.jpg" alt="">
+                            </div>
+                            <div class="commodity_title">
+                                特濃黑糖厚奶蓋蛋糕
+                            </div>
+                            <div class="commodity_title_english">
+                                Black Sugar Cheese Foam Cake
+                            </div>
+                            <div class="commodity_sort">
+                                甜點｜dessert
+                            </div>
+                        </div>
+                        <div class="swiper-slide d-f-direction-c">
+                            <div class="img-w-h-border-img">
+                                <img class="product-img"
+                                src="./images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg" alt="">
+                            </div>
+                            <div class="commodity_title">
+                                老虎芝士流心雪糕
+                            </div>
+                            <div class="commodity_title_english">
+                                Tiger Cheese Filling Black Sugar Ice Cream Bar
+                            </div>
+                            <div class="commodity_sort">
+                                冰品｜Ice
+                            </div>
+                        </div>
                     </div>
-                    
+
                 </div>
                 <div class="swiper-button2">
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
                 </div>
             </div>
-   
+
             </div>
         </section>
 
