產品經銷 大致完成（剩下hover）

--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -103,6 +103,13 @@
                             <div class="img-w-h-border-img">
                                 <img class="product-img"
                                     src="./images/product/1668998205a2557a7b2e94197ff767970b67041697.jpg" alt="">
+                                    <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                    <div class="product_img_hover">
+                                        <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                        <a href="" class="commodity_more_button btn">
+                                            MORE
+                                        </a>
+                                    </div>
                             </div>
                             <div class="commodity_title">
                                 老虎堂地瓜條
@@ -118,6 +125,7 @@
                             <div class="img-w-h-border-img">
                                 <img class="product-img"
                                     src="./images/product/165899031442a0e188f5033bc65bf8d78622277c4e.jpg" alt="">
+                                    <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
                             </div>
                             <div class="commodity_title">
                                 經典黑糖麻糬包
@@ -133,6 +141,7 @@
                             <div class="img-w-h-border-img">
                                 <img class="product-img"
                                 src="./images/product/165899100742a0e188f5033bc65bf8d78622277c4e.jpg" alt="">
+                                <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
                             </div>
                             <div class="commodity_title">
                                 爆漿起司流心包
@@ -148,6 +157,7 @@
                             <div class="img-w-h-border-img">
                                 <img class="product-img"
                                 src="./images/product/1658908734cfecdb276f634854f3ef915e2e980c31.jpg" alt="">
+                                <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
                             </div>
                             <div class="commodity_title">
                                 黑糖奶霜樹幹年輪
@@ -163,6 +173,7 @@
                             <div class="img-w-h-border-img">
                                 <img class="product-img"
                                 src="./images/product/16589912415878a7ab84fb43402106c575658472fa.jpg" alt="">
+                                <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
                             </div>
                             <div class="commodity_title">
                                 特濃黑糖厚奶蓋蛋糕
@@ -178,6 +189,7 @@
                             <div class="img-w-h-border-img">
                                 <img class="product-img"
                                 src="./images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg" alt="">
+                                <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
                             </div>
                             <div class="commodity_title">
                                 老虎芝士流心雪糕
@@ -193,11 +205,15 @@
 
                 </div>
                 <div class="swiper-button2">
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next">
+                        <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
+                    </div>
+                    <div class="swiper-button-prev">
+                        <img class="next-prev-img" src="./img/commodity-prev.svg" alt="">
+                    </div>
                 </div>
+                <a href="" class="distribution_area_button ">更多商品</a>
             </div>
-
             </div>
         </section>
 
