swiper小錯誤修正

--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/swiperCss.css">
     <link rel="stylesheet" href="./css/distribution.css">
+    <link rel="stylesheet" href="./css/news.css">
 </head>
 
 <body>
@@ -103,13 +104,13 @@
                             <div class="img-w-h-border-img">
                                 <img class="product-img"
                                     src="./images/product/1668998205a2557a7b2e94197ff767970b67041697.jpg" alt="">
-                                    <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
-                                    <div class="product_img_hover">
-                                        <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
-                                        <a href="" class="commodity_more_button btn">
-                                            MORE
-                                        </a>
-                                    </div>
+                                <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                <div class="product_img_hover">
+                                    <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                    <a href="" class="commodity_more_button btn">
+                                        MORE
+                                    </a>
+                                </div>
                             </div>
                             <div class="commodity_title">
                                 老虎堂地瓜條
@@ -125,7 +126,7 @@
                             <div class="img-w-h-border-img">
                                 <img class="product-img"
                                     src="./images/product/165899031442a0e188f5033bc65bf8d78622277c4e.jpg" alt="">
-                                    <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
                             </div>
                             <div class="commodity_title">
                                 經典黑糖麻糬包
@@ -140,7 +141,7 @@
                         <div class="swiper-slide d-f-direction-c">
                             <div class="img-w-h-border-img">
                                 <img class="product-img"
-                                src="./images/product/165899100742a0e188f5033bc65bf8d78622277c4e.jpg" alt="">
+                                    src="./images/product/165899100742a0e188f5033bc65bf8d78622277c4e.jpg" alt="">
                                 <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
                             </div>
                             <div class="commodity_title">
@@ -156,7 +157,7 @@
                         <div class="swiper-slide d-f-direction-c">
                             <div class="img-w-h-border-img">
                                 <img class="product-img"
-                                src="./images/product/1658908734cfecdb276f634854f3ef915e2e980c31.jpg" alt="">
+                                    src="./images/product/1658908734cfecdb276f634854f3ef915e2e980c31.jpg" alt="">
                                 <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
                             </div>
                             <div class="commodity_title">
@@ -172,7 +173,7 @@
                         <div class="swiper-slide d-f-direction-c">
                             <div class="img-w-h-border-img">
                                 <img class="product-img"
-                                src="./images/product/16589912415878a7ab84fb43402106c575658472fa.jpg" alt="">
+                                    src="./images/product/16589912415878a7ab84fb43402106c575658472fa.jpg" alt="">
                                 <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
                             </div>
                             <div class="commodity_title">
@@ -188,7 +189,7 @@
                         <div class="swiper-slide d-f-direction-c">
                             <div class="img-w-h-border-img">
                                 <img class="product-img"
-                                src="./images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg" alt="">
+                                    src="./images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg" alt="">
                                 <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
                             </div>
                             <div class="commodity_title">
@@ -224,7 +225,92 @@
         <section id="media"></section>
 
         <!-- 佑 媒體報導 -->
-        <section id="news"></section>
+        <section id="news">
+            <div class="header">
+                <div class="container"></div>
+                <div class="container">
+                    <div class="title">
+                        <img class="ig-icon" src="/images/nav/icon1-7.png" alt="ig-icon">
+                        <div class="title-text">
+                            <div class="title-text-1">社群回饋</div>
+                            <div class="title-text-2">SOCIAL</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Swiper -->
+            <div #swiperRef="" class="swiper mySwiper3">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide" style="margin-right:unset !important;">
+                        <a target="_blank" href="https://fairylolita.com/tigersugar-taoyuan">
+                            <div class="card">
+                                <div class="news-img">
+                                </div>
+                                <div class="card-body">
+                                    <div class="blog-name">謝蘿莉</div>
+                                    <div class="card-title">2019 伴手禮推薦 喝黑糖波霸鮮奶不稀奇...</div>
+                                    <div class="card-content">風靡全台灣，造成瘋狂排隊熱潮的虎紋首創老虎堂，終於也開到桃園來囉！
+                                        地點就落在桃園火車站附近的「ATT筷食尚」裡面，果然新開幕的店家就是能引起大家青睞，等候人潮...</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a target="_blank" href="https://fairylolita.com/tigersugar-taoyuan">
+                            <div class="card">
+                                <div class="news-img">
+                                </div>
+                                <div class="card-body">
+                                    <div class="blog-name">謝蘿莉</div>
+                                    <div class="card-title">2019 伴手禮推薦 喝黑糖波霸鮮奶不稀奇...</div>
+                                    <div class="card-content">風靡全台灣，造成瘋狂排隊熱潮的虎紋首創老虎堂，終於也開到桃園來囉！
+                                        地點就落在桃園火車站附近的「ATT筷食尚」裡面，果然新開幕的店家就是能引起大家青睞，等候人潮...</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a target="_blank" href="https://fairylolita.com/tigersugar-taoyuan">
+                            <div class="card">
+                                <div class="news-img">
+                                </div>
+                                <div class="card-body">
+                                    <div class="blog-name">謝蘿莉</div>
+                                    <div class="card-title">2019 伴手禮推薦 喝黑糖波霸鮮奶不稀奇...</div>
+                                    <div class="card-content">風靡全台灣，造成瘋狂排隊熱潮的虎紋首創老虎堂，終於也開到桃園來囉！
+                                        地點就落在桃園火車站附近的「ATT筷食尚」裡面，果然新開幕的店家就是能引起大家青睞，等候人潮...</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a target="_blank" href="https://fairylolita.com/tigersugar-taoyuan">
+                            <div class="card">
+                                <div class="news-img">
+                                </div>
+                                <div class="card-body">
+                                    <div class="blog-name">謝蘿莉</div>
+                                    <div class="card-title">2019 伴手禮推薦 喝黑糖波霸鮮奶不稀奇...</div>
+                                    <div class="card-content">風靡全台灣，造成瘋狂排隊熱潮的虎紋首創老虎堂，終於也開到桃園來囉！
+                                        地點就落在桃園火車站附近的「ATT筷食尚」裡面，果然新開幕的店家就是能引起大家青睞，等候人潮...</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slide"></div>
+                    <div class="swiper-slide"></div>
+                    <div class="swiper-slide"></div>
+                    <div class="swiper-slide"></div>
+                </div>
+
+            </div>
+
+            <div class="swiper-button3">
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+            </div>
+        </section>
 
         <!-- 齊 加盟專區 -->
         <section id="franchisee"></section>
