媒體報導 大致完成（margin-right:30消除）

--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -230,10 +230,10 @@
                 <div class="container"></div>
                 <div class="container">
                     <div class="title">
-                        <img class="ig-icon" src="/images/nav/icon1-7.png" alt="ig-icon">
+                        <img class="share-icon" src="/images/nav/icon1-2.png" alt="ig-icon">
                         <div class="title-text">
-                            <div class="title-text-1">社群回饋</div>
-                            <div class="title-text-2">SOCIAL</div>
+                            <div class="title-text-1">媒體報導</div>
+                            <div class="title-text-2">News & Blogger</div>
                         </div>
                     </div>
                 </div>
@@ -242,10 +242,97 @@
             <!-- Swiper -->
             <div #swiperRef="" class="swiper mySwiper3">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide" style="margin-right:unset !important;">
+                    <div class="swiper-slide">
+                        <a target="_blank" href="https://www.popdaily.com.tw/food/962274">
+                            <div class="card">
+                                <div id="news-img-1" class="news-img">
+                                </div>
+                                <div class="card-body">
+                                    <div class="blog-name">波波黛莉</div>
+                                    <div class="card-title">不只黑糖系列超欠喝！老虎堂夏季新推「...</div>
+                                    <div class="card-content">當季的最美味！身為芒果、甜點控這杯真的很可以～
+                                        這次會推出楊枝甘露的飲品，一方面是要用當季的芒果來迎接夏天，還要慶祝澳門老虎堂獲得2020年澳門第五屆我最愛餐廳...</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a target="_blank" href="https://www.popdaily.com.tw/food/837759">
+                            <div class="card">
+                                <div id="news-img-2" class="news-img">
+                                </div>
+                                <div class="card-body">
+                                    <div class="blog-name">波波黛莉</div>
+                                    <div class="card-title">手搖界最夯的麻糬瀑布你吃過了嗎？超濃...</div>
+                                    <div class="card-content">
+                                        現在老虎堂還推出超強新品「日式麻糬波波系列」，餡料超香濃的麻糬帶有濃濃奶香，重點是麻糬竟然可以用喝的，號稱是世界第一款可以喝的黑糖麻糬，趕快先看看有多厲害吧！
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a target="_blank" href="http://rubylife5.pixnet.net/blog/post/205382619">
+                            <div class="card">
+                                <div id="news-img-3" class="news-img">
+                                </div>
+                                <div class="card-body">
+                                    <div class="blog-name">路比食旅生活</div>
+                                    <div class="card-title">【台北市中正區/手搖飲料/捷運北車】人...</div>
+                                    <div class="card-content">沒想到這麼快，老虎堂在台北開了第二家分店，
+                                        一直想喝老虎堂的我終於不用大老遠跑去士林啦！</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a target="_blank" href="https://fairylolita.com/post-460835903/">
+                            <div class="card">
+                                <div id="news-img-4" class="news-img">
+                                </div>
+                                <div class="card-body">
+                                    <div class="blog-name">蹦啾謝蘿莉</div>
+                                    <div class="card-title">《台中♥食記》Tigersugar老虎堂(老虎堂...</div>
+                                    <div class="card-content">台中熱鬧的一中商圈，最近又出現了一間爆紅的排隊打卡店
+                                        我明明不過只是來買杯黑糖珍奶，竟然足足排了將近二個小時</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a target="_blank" href="https://hoolee.tw/tigersugar-kaohsiung">
+                            <div class="card">
+                                <div id="news-img-5" class="news-img">
+                                </div>
+                                <div class="card-body">
+                                    <div class="blog-name">凱的食尚日記</div>
+                                    <div class="card-title">☆【台北 / 中山站】老虎堂中山南西店新...</div>
+                                    <div class="card-content">台中有名的老虎堂前陣子來台北開分店了
+                                        我一直想去士林店朝聖
+                                        結果好多朋友都恐嚇我說要排隊排好久，而且不好喝
+                                        幸好～最近中山也開了一家分店</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a target="_blank" href="https://wp.me/paQ529-7W">
+                            <div class="card">
+                                <div id="news-img-6" class="news-img">
+                                </div>
+                                <div class="card-body">
+                                    <div class="blog-name">虎麗笑嗨嗨</div>
+                                    <div class="card-title">老虎堂 新崛江店(高雄)人氣排隊飲料!必...</div>
+                                    <div class="card-content">
+                                        近期還有新推出黑糖厚夾心餅乾！當伴手禮送朋友也不錯，加了青蔥的蘇打餅乾酥脆微鹹，厚厚的黑糖夾心香甜順口，融在嘴裡的滋味讓人愈吃愈涮嘴。</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
                         <a target="_blank" href="https://fairylolita.com/tigersugar-taoyuan">
                             <div class="card">
-                                <div class="news-img">
+                                <div id="news-img-7" class="news-img">
                                 </div>
                                 <div class="card-body">
                                     <div class="blog-name">謝蘿莉</div>
@@ -257,51 +344,73 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a target="_blank" href="https://fairylolita.com/tigersugar-taoyuan">
+                        <a target="_blank" href="https://orange-dog.com/tigersugar/">
                             <div class="card">
-                                <div class="news-img">
+                                <div id="news-img-8" class="news-img">
                                 </div>
                                 <div class="card-body">
-                                    <div class="blog-name">謝蘿莉</div>
-                                    <div class="card-title">2019 伴手禮推薦 喝黑糖波霸鮮奶不稀奇...</div>
-                                    <div class="card-content">風靡全台灣，造成瘋狂排隊熱潮的虎紋首創老虎堂，終於也開到桃園來囉！
-                                        地點就落在桃園火車站附近的「ATT筷食尚」裡面，果然新開幕的店家就是能引起大家青睞，等候人潮...</div>
+                                    <div class="blog-name">橘子狗愛吃糖</div>
+                                    <div class="card-title">台中飲料】老虎堂黑糖專賣 一中街│北區...</div>
+                                    <div class="card-content">講到黑糖鮮奶波霸，台北有陳三鼎、珍煮丹，台南有東洲黑糖奶鋪，台中也不落人後。
+                                        一中街新的IPLAZA廣場【TigerSugar老虎堂 黑糖專売】再度引起瘋狂排隊熱潮！</div>
                                 </div>
                             </div>
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a target="_blank" href="https://fairylolita.com/tigersugar-taoyuan">
+                        <a target="_blank" href="http://pai0916.pixnet.net/blog/post/349179109">
                             <div class="card">
-                                <div class="news-img">
+                                <div id="news-img-9" class="news-img">
                                 </div>
                                 <div class="card-body">
-                                    <div class="blog-name">謝蘿莉</div>
-                                    <div class="card-title">2019 伴手禮推薦 喝黑糖波霸鮮奶不稀奇...</div>
-                                    <div class="card-content">風靡全台灣，造成瘋狂排隊熱潮的虎紋首創老虎堂，終於也開到桃園來囉！
-                                        地點就落在桃園火車站附近的「ATT筷食尚」裡面，果然新開幕的店家就是能引起大家青睞，等候人潮...</div>
+                                    <div class="blog-name">飯桶家族的吃喝玩樂</div>
+                                    <div class="card-title">台南東區-老虎堂黑糖波霸 台中排隊飲品...</div>
+                                    <div class="card-content">飯編偶爾會在IG看見許多潮流美食，
+                                        加上軟體本身的即時性與便利性，讓資訊傳遞更加快速
+                                        在偶然間發現大家討論台南也要有老虎堂囉!</div>
                                 </div>
                             </div>
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a target="_blank" href="https://fairylolita.com/tigersugar-taoyuan">
+                        <a target="_blank" href="http://hululu.tw/tigersugar/">
                             <div class="card">
-                                <div class="news-img">
+                                <div id="news-img-10" class="news-img">
                                 </div>
                                 <div class="card-body">
-                                    <div class="blog-name">謝蘿莉</div>
-                                    <div class="card-title">2019 伴手禮推薦 喝黑糖波霸鮮奶不稀奇...</div>
-                                    <div class="card-content">風靡全台灣，造成瘋狂排隊熱潮的虎紋首創老虎堂，終於也開到桃園來囉！
-                                        地點就落在桃園火車站附近的「ATT筷食尚」裡面，果然新開幕的店家就是能引起大家青睞，等候人潮...</div>
+                                    <div class="blog-name">花露露 の花花世界</div>
+                                    <div class="card-title">台灣美食 「老虎堂黑糖專賣」虎式黑糖奶...</div>
+                                    <div class="card-content">台灣美食 「老虎堂黑糖專賣」虎式黑糖奶！現在化身為一片片的黑糖厚夾心！甜鹹滋味太涮嘴。台灣首賣！홍대｜타이거슈가</div>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="swiper-slide"></div>
-                    <div class="swiper-slide"></div>
-                    <div class="swiper-slide"></div>
-                    <div class="swiper-slide"></div>
+                    <div class="swiper-slide">
+                        <a target="_blank" href="http://peko721.pixnet.net/blog/post/46674267-%E3%80%90%E4%BF%A1%E7%BE%A9%E5%8D%80%E6%89%8B%E6%90%96%E9%A3%B2%E6%8E%A8%E8%96%A6%E3%80%91%E8%80%81%E8%99%8E%E5%A0%82tigersugar-att%E4%BF%A1%E7%BE%A9">
+                            <div class="card">
+                                <div id="news-img-11" class="news-img">
+                                </div>
+                                <div class="card-body">
+                                    <div class="blog-name">PEKO の Simple Life</div>
+                                    <div class="card-title">老虎堂Tigersugar ATT信義店-波霸厚鮮奶...</div>
+                                    <div class="card-content">老虎糖波霸厚鮮奶大家應該都喝過，但你吃過「老虎堂」的黑糖厚夾心餅乾嗎?? 一開封就讓人忍不住一口接著一口，蘇打餅脆、黑糖餡濃郁，算是PEKO吃過蔥花牛軋糖夾心餅乾裡...</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a target="_blank" href="https://kel8257.pixnet.net/blog/post/355514156">
+                            <div class="card">
+                                <div id="news-img-12" class="news-img">
+                                </div>
+                                <div class="card-body">
+                                    <div class="blog-name">台南女孩凱莉吃透透</div>
+                                    <div class="card-title">【2019台灣超夯伴手禮】黑糖厚夾心餅乾...</div>
+                                    <div class="card-content">『老虎堂TigerSugar』!現在也推出罪惡的黑糖厚夾心伴手禮盒了，將老虎堂招牌黑糖奶製作成夾心餅乾，可以說是2019台灣超人氣伴手禮，不少外國朋友來台灣指定要購買!!!</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
 
             </div>
