產品經銷 hover完成

--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -127,6 +127,12 @@
                                 <img class="product-img"
                                     src="./images/product/165899031442a0e188f5033bc65bf8d78622277c4e.jpg" alt="">
                                 <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                <div class="product_img_hover">
+                                    <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                    <a href="" class="commodity_more_button btn">
+                                        MORE
+                                    </a>
+                                </div>
                             </div>
                             <div class="commodity_title">
                                 經典黑糖麻糬包
@@ -143,6 +149,12 @@
                                 <img class="product-img"
                                     src="./images/product/165899100742a0e188f5033bc65bf8d78622277c4e.jpg" alt="">
                                 <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                <div class="product_img_hover">
+                                    <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                    <a href="" class="commodity_more_button btn">
+                                        MORE
+                                    </a>
+                                </div>
                             </div>
                             <div class="commodity_title">
                                 爆漿起司流心包
@@ -159,6 +171,12 @@
                                 <img class="product-img"
                                     src="./images/product/1658908734cfecdb276f634854f3ef915e2e980c31.jpg" alt="">
                                 <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                <div class="product_img_hover">
+                                    <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                    <a href="" class="commodity_more_button btn">
+                                        MORE
+                                    </a>
+                                </div>
                             </div>
                             <div class="commodity_title">
                                 黑糖奶霜樹幹年輪
@@ -175,6 +193,12 @@
                                 <img class="product-img"
                                     src="./images/product/16589912415878a7ab84fb43402106c575658472fa.jpg" alt="">
                                 <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                <div class="product_img_hover">
+                                    <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                    <a href="" class="commodity_more_button btn">
+                                        MORE
+                                    </a>
+                                </div>
                             </div>
                             <div class="commodity_title">
                                 特濃黑糖厚奶蓋蛋糕
@@ -191,6 +215,12 @@
                                 <img class="product-img"
                                     src="./images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg" alt="">
                                 <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                <div class="product_img_hover">
+                                    <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                    <a href="" class="commodity_more_button btn">
+                                        MORE
+                                    </a>
+                                </div>
                             </div>
                             <div class="commodity_title">
                                 老虎芝士流心雪糕
