--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <style>
         * {
             box-sizing: border-box;
         }
 
         .v100 {
-            height: 100vh;
+            height: calc(80vh - 76px);
             width: 100vw;
             background-color: blanchedalmond;
         }
+
+        /* CSS about */
 
         #about {
             height: 100vh;
@@ -24,9 +27,9 @@
             background-image: url("images/background_img/about_bg.webp");
             background-size: cover;
             position: relative;
-            background-attachment: fixed;
             background-position: center;
             background-repeat: no-repeat;
+            overflow: hidden;
         }
 
         .black-sugar {
@@ -42,9 +45,10 @@
 
         .container-about-us-title {
             width: 100%;
-            padding: 0 15px;
-            margin: 0 auto;
-            display: block;
+            display: flex;
+            position: absolute;
+            left: 10%;
+            top: 10%;
             z-index: 1;
         }
 
@@ -54,7 +58,7 @@
             width: 32px;
             height: 32px;
             float: left;
-            margin-right: 2px;
+            margin-right: 6px;
         }
 
         .about-us-tilte {
@@ -68,7 +72,15 @@
             font-weight: 500;
         }
 
-        .clear-fix {}
+        .about-us-tilte h1 {
+            margin-bottom: 0;
+        }
+
+        .about-us-tilte h2 {
+            margin-top: 0px;
+            margin-bottom: 8px;
+        }
+
 
         .clear-fix:after {
             display: block;
@@ -77,18 +89,24 @@
         }
 
 
-        .about-card-group-container {}
+        .about-card-group-container {
+            position: absolute;
+            left: 3%;
+            top: 25%;
+        }
 
         .about-card-group-text-animation-top {
             display: flex;
             flex-direction: row;
             margin-bottom: 60px;
+            padding-left: 10%;
         }
 
         .about-card-group-text-animation-botton {
             display: flex;
             flex-direction: row;
             margin-bottom: 60px;
+            padding-left: 10%;
         }
 
         .about-card-group-img {
@@ -97,6 +115,7 @@
 
         .about-card-group-text {
             color: white;
+            margin-left: 30px;
         }
 
         .about-card-group-text h2 {
@@ -107,9 +126,8 @@
             /* display: none; */
             width: 100%;
             position: absolute;
-            /* left: -100px; */
-            top:0;
-            left: -95%;
+            left: -100%;
+            top: 0;
             z-index: 50;
         }
 
@@ -122,26 +140,139 @@
             /* display: none; */
             width: 100%;
             position: absolute;
-            top:0;
-            right: -95%;
+            top: 0;
+            right: -100%;
             z-index: 50;
         }
 
         .cloud-right img {
             overflow: clip;
             overflow-clip-margin: contentbox;
-           
+
         }
 
         .about-us-scroll-img {
             width: 30vw;
-            height: 300px;
             position: absolute;
-            right: 10%;
-            bottom: 50%;
+            right: 5%;
+            top: 10%;
             /* z-index: ; */
-           
-            transform: translateY(30%);
+            /* transform: translateY(30%); */
+        }
+
+        /* CSS franchisee */
+
+        #franchisee {
+            width: 100vw;
+            height: 400px;
+            padding: 50px 0 40px;
+            background-color: bisque;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-image: url(./images/background_img/about_bg.png);
+            position: relative;
+        }
+
+        .franchisee-container {
+            height: 100px;
+            width: 100%;
+            padding: 0 15px;
+            margin: auto;
+        }
+
+        .franchisee-container-animation {
+            display: flex;
+
+            justify-content: center;
+
+        }
+
+        .join-us-img {
+            width: 400px;
+            height: 100px;
+            background-image: url(./images/franchisee/logo-Graphic.png);
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
+
+        .join-us-img img {
+            width: 100px;
+            height: 100px;
+        }
+
+        .join-us-info {
+            display: flex;
+            flex-direction: row;
+            background-image: url(./images/franchisee/logo-Text.png);
+            width: 250px;
+            height: 60px;
+            background-repeat: no-repeat;
+            background-size: contain;
+            margin-left: 130px;
+            margin-top: 5px;
+        }
+
+
+        @keyframes flashing {
+            0% {
+                color: #fee483;
+            }
+            50% {
+                color: white;
+            }
+            100% {
+                color: #fee483;
+            }
+        }
+
+        .join-us-info h2 {
+            margin-top: 75px;
+            font-size: 18px;
+            letter-spacing: 2px;
+            text-align: center;
+            color: #fee483;
+            font-weight: 400;
+            -webkit-animation: flashing 1.5s infinite;
+            animation: flashing 1.5s infinite;
+        }
+
+        .franchisee-icon {
+            background-image: url("./images/nav/icon1-5.png");
+            background-size: contain;
+            width: 32px;
+            height: 32px;
+            float: left;
+            margin-right: 6px;
+            float: left;
+        }
+
+        .franchisee-title {
+            width: 150px;
+            height: 50px;
+            color: white;
+            position: absolute;
+            left: 10%;
+            top: 50px;
+        }
+
+        .franchisee-title h1,
+        h2 {
+            font-size: 14px;
+            font-weight: 500;
+        }
+
+        .franchisee-title h1 {
+            margin: 0;
+        }
+
+        .franchisee-title h2 {
+            margin-top: 0px;
+            margin-bottom: 8px;
+        }
+
+        .franchisee-link {
+            text-decoration: none;
         }
     </style>
 </head>
@@ -207,13 +338,14 @@
                     </div>
                 </div>
             </div>
-            <div class="cloud-left slide-in" data-aos="fade-left">
+            <div class="cloud-left" data-aos="fade-left" data-aos-anchor-placement="center-left"
+                data-aos-easing="ease-in-sine" data-aos-offset="1100">
                 <img src="./images/background_img/left_cloud_bg.webp">
             </div>
-            <div class="cloud-right" data-aos="fade-right">
+            <div class="cloud-right">
                 <img src="./images/background_img/right_cloud_bg.webp">
             </div>
-            <div class="about-us-scroll-img slide-in">
+            <div class="about-us-scroll-img ">
                 <img src="./images/background_img/logo_black.webp">
             </div>
         </section>
@@ -235,7 +367,25 @@
         <section id="news"></section>
 
         <!-- 齊 加盟專區 -->
-        <section id="franchisee"></section>
+        <section id="franchisee">
+            <div class="franchisee-container">
+                <div class="franchisee-title">
+                    <div class="franchisee-icon"></div>
+                    <h1>加盟專區</h1>
+                    <h2>FRANCHISEE</h2>
+                </div>
+                <div class="franchisee-container-animation">
+                    <a href="" class="franchisee-link">
+                        <div class="join-us-img">
+                            <div class="join-us-info">
+                                <h2> <i class="bi bi-star-fill"></i>Join Our Franchise! <i class="bi bi-star-fill"></i>
+                                </h2>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
 
     </main>
 
@@ -244,38 +394,42 @@
     <footer></footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
 
     <script>
         AOS.init();
-        // let animationPlayed = false;
+        let animationPlayed = false;
 
-        // function blackSugarDelay(number) {
-        //     document.querySelector('.black-sugar').setAttribute('data-aos-duration', 800)
-        // }
-        // setTimeout(blackSugarDelay, 3000);
+        function blackSugarDelay(number) {
+            document.querySelector('.black-sugar').setAttribute('data-aos-duration', 800)
+        }
+        setTimeout(blackSugarDelay, 3000);
 
 
 
-        // const sliderImages = document.querySelectorAll('.slide-in');
 
-        // function checkSlide() {
-        //     sliderImages.forEach(sliderImage => {
-        //         // half way through the image
-        //         const slideInAt = (window.scrollY + window.innerHeight) - sliderImage.height / 2;
-        //         // bottom of the image
-        //         const imageBottom = sliderImage.offsetTop + sliderImage.height;
-        //         const isHalfShown = slideInAt > sliderImage.offsetTop;
-        //         const isNotScrolledPast = window.scrollY < imageBottom;
-        //         if (isHalfShown && isNotScrolledPast) {
-        //             sliderImage.classList.add('active');
-        //         } else {
-        //             sliderImage.classList.remove('active');
-        //         }
-        //     });
-        // }
+        const scrollImg = document.querySelector(".about-us-scroll-img");
+        const aboutSection = document.querySelector("#about");
+        let scrollPosition = 0;
+        const sectionHeight = aboutSection.clientHeight;
+        const minScrollPosition = -sectionHeight * 0.3; // 30%下
+        const maxScrollPosition = sectionHeight * 0.3; // 30%上
+        const scrollSpeed = 0.5;
 
-        // window.addEventListener('scroll', debounce(checkSlide));
+        document.addEventListener("wheel", (event) => {
+            const deltaY = event.deltaY * scrollSpeed;
+            scrollPosition += deltaY;
+            if (scrollPosition < minScrollPosition) {
+                scrollPosition = minScrollPosition;
+            }
+            if (scrollPosition > maxScrollPosition) {
+                scrollPosition = maxScrollPosition;
+            }
+            scrollImg.style.transform = `translateY(${scrollPosition}px)`;
+            event.preventDefault();
+        });
+
+
     </script>
 </body>
 
