--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -41,7 +41,7 @@
             background-repeat: no-repeat;
         }
 
-        .container-about-us-header {}
+        /* .container-about-us-header {} */
 
         .container-about-us-title {
             width: 100%;
@@ -126,7 +126,7 @@
             /* display: none; */
             width: 100%;
             position: absolute;
-            left: -100%;
+            /* left: -100%; */
             top: 0;
             z-index: 50;
         }
@@ -338,14 +338,14 @@
                     </div>
                 </div>
             </div>
-            <div class="cloud-left" data-aos="fade-left" data-aos-anchor-placement="center-left"
+            <div class="cloud-left" data-aos="fade-left" data-aos-anchor-placement="center-left" data-aos-once="true" data-aos-offset="900"
                 data-aos-easing="ease-in-sine" data-aos-offset="1100">
                 <img src="./images/background_img/left_cloud_bg.webp">
             </div>
-            <div class="cloud-right">
+            <div class="cloud-right" data-aos="fade-rifht" data-aos-anchor-placement="center-rifht" data-aos-once="true" data-aos-offset="1000">
                 <img src="./images/background_img/right_cloud_bg.webp">
             </div>
-            <div class="about-us-scroll-img ">
+            <div class="about-us-scroll-img">
                 <img src="./images/background_img/logo_black.webp">
             </div>
         </section>
@@ -374,7 +374,7 @@
                     <h1>加盟專區</h1>
                     <h2>FRANCHISEE</h2>
                 </div>
-                <div class="franchisee-container-animation">
+                <div class="franchisee-container-animation" data-aos="zoom-in">
                     <a href="" class="franchisee-link">
                         <div class="join-us-img">
                             <div class="join-us-info">
